--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&family=Zen+Kaku+Gothic+Antique:wght@300&display=swap" rel="stylesheet">
+        <style>
+            #meu-nome{
+                font-family: "Zen Antique Soft", "arial";
+            }
+            #descricao{
+                font-family: "Zen Kaku Gothic Antique","arial";
+            }
+
+        </style>
     </head>
     <body>
         <h1>Meu Portfólio Web</h1>
@@ -20,7 +32,7 @@
         <br>
         <a href="images/perfil.jpeg" target="_blank">Foto</a>
         <p id="descricao">
-            Esse sou eu, <strong>Eduardo de Souza Rodrigues</strong>, <br>
+            Esse sou eu, <strong id="meu-nome">Eduardo de Souza Rodrigues</strong>, <br>
             sou nascido e criado na maior capital do <strong>Brasil</strong>, a terra da garoa, <br>
             <strong>São Paulo</strong> e como é nítido me orgulho disso, atualmente estou iniciando <br>
             nessa jornada de desenvolvimento web pela Trybe aqui do interior de SP, <br>
