--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&family=Zen+Kaku+Gothic+Antique:wght@300&display=swap" rel="stylesheet">
         <style>
             #meu-nome{
-                font-family: "Zen Antique Soft", "arial";
+                font-family: "Zen Antique Soft", "arial";                
+            }
+            .destaque{
+                color: #023E8A;
+                font-size: 18px;
+                font-style: italic;                
             }
             #descricao{
                 font-family: "Zen Kaku Gothic Antique","arial";
+            }
+            body{
+                background-color: #CAF0F8;
+                color: #0077B6;
             }
 
         </style>
@@ -21,28 +30,28 @@
     <body>
         <h1>Meu Portfólio Web</h1>
         <br>
-        <h2>Índice:</h2>
+        <h2 >Índice:</h2>
         <ol>
             <li><a href="#descricao">Quem sou eu?</a></li>            
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#inspiracao">Inspirações</a></li>
         </ol>
-        <h3>Quem sou eu?</h3>
+        <h3 >Quem sou eu?</h3>
         <img src="images/perfil.jpeg" alt="Foto do Eduardo com um headset e sorrindo" width = 300px>
         <br>
         <a href="images/perfil.jpeg" target="_blank">Foto</a>
         <p id="descricao">
-            Esse sou eu, <strong id="meu-nome">Eduardo de Souza Rodrigues</strong>, <br>
-            sou nascido e criado na maior capital do <strong>Brasil</strong>, a terra da garoa, <br>
-            <strong>São Paulo</strong> e como é nítido me orgulho disso, atualmente estou iniciando <br>
+            Esse sou eu, <strong class="destaque" id="meu-nome">Eduardo de Souza Rodrigues</strong>, <br>
+            sou nascido e criado na maior capital do <strong class="destaque">Brasil</strong>, a terra da garoa, <br>
+            <strong class="destaque">São Paulo</strong> e como é nítido me orgulho disso, atualmente estou iniciando <br>
             nessa jornada de desenvolvimento web pela Trybe aqui do interior de SP, <br>
-            <strong>São José do Rio Preto</strong>.
+            <strong class="destaque">São José do Rio Preto</strong>.
         </p>
         <hr>
         <p id="habilidades">
             <h3>Habilidades</h3>
             <ul>
-                <li><strong>Técnico em informática</strong></li>
+                <li><strong class="destaque">Técnico em informática</strong></li>
                 <li>Curso de oratória</li>
                 <li>Proatividade</li>
                 <li>Facilidade de aprendizado</li>
