Versão final Requisito 4

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
                 background-color: #CAF0F8;
                 color: #0077B6;
             }
-
+            .info{
+                font-size: 22px;
+            }
+            .oratoria{
+                font-size: 20px;
+            }
+            .proatividade{
+                font-size: 18px;
+            }
+            .facilidade{
+                font-size: 14px;
+            }
         </style>
     </head>
     <body>
@@ -51,10 +62,10 @@
         <p id="habilidades">
             <h3>Habilidades</h3>
             <ul>
-                <li><strong class="destaque">Técnico em informática</strong></li>
-                <li>Curso de oratória</li>
-                <li>Proatividade</li>
-                <li>Facilidade de aprendizado</li>
+                <li><strong class="destaque info">Técnico em informática</strong></li>
+                <li class="oratoria">Curso de oratória</li>
+                <li class="proatividade">Proatividade</li>
+                <li class="facilidade">Facilidade de aprendizado</li>
             </ul>
         </p>
         <hr>
